// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`descriptions demos renders ./packages/descriptions/src/demos/base.tsx correctly 1`] = `
<div
  class="ant-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center ant-pro-core-label-tip"
      >
        <div
          class="ant-space-item"
          style="margin-right: 4px;"
        >
          高级定义列表
        </div>
        <div
          class="ant-space-item"
        >
          <span
            aria-label="info-circle"
            class="anticon anticon-info-circle ant-pro-core-label-tip-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="info-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-descriptions-extra"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                文本
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                这是一段文本
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center ant-pro-core-label-tip"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 4px;"
                  >
                    金额
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle ant-pro-core-label-tip-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  ￥ 100
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                百分比
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  100.00%
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                选择框
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-error"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    未解决
                  </span>
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                远程选择框
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                已解决
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                进度条
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <div
                  class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-small"
                  style="min-width: 100px;"
                >
                  <div
                    class="ant-progress-outer"
                  >
                    <div
                      class="ant-progress-inner"
                    >
                      <div
                        class="ant-progress-bg"
                        style="width: 40%; height: 6px;"
                      />
                    </div>
                  </div>
                  <span
                    class="ant-progress-text"
                    title="40%"
                  >
                    40%
                  </span>
                </div>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                日期时间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2016-11-22 00:00:00
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                日期
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2016-11-22
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                日期区间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <div>
                  <div>
                    2016-11-21 00:00:00
                  </div>
                  <div>
                    2016-11-22 00:00:00
                  </div>
                </div>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                时间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  00:00:00
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                代码块
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <pre
                  style="padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: rgb(246, 248, 250); border-radius: 3px;"
                >
                  <code>
                    
            yarn run v1.22.0
            $ eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./packages
            Done in 9.70s.
          
                  </code>
                </pre>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                JSON 代码块
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <pre
                  style="padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: rgb(246, 248, 250); border-radius: 3px;"
                >
                  <code>
                    {
  "compilerOptions": {
    "target": "esnext",
    "moduleResolution": "node",
    "jsx": "preserve",
    "esModuleInterop": true,
    "experimentalDecorators": true,
    "strict": true,
    "forceConsistentCasingInFileNames": true,
    "noImplicitReturns": true,
    "suppressImplicitAnyIndexErrors": true,
    "declaration": true,
    "skipLibCheck": true
  },
  "include": [
    "**/src",
    "**/docs",
    "scripts",
    "**/demo",
    ".eslintrc.js"
  ]
}
                  </code>
                </pre>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demos renders ./packages/descriptions/src/demos/columns.tsx correctly 1`] = `
<div
  class="ant-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      高级定义列表request columns
    </div>
    <div
      class="ant-descriptions-extra"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center ant-pro-field-option"
      >
        <div
          class="ant-space-item"
        >
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            链路
          </a>
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            报警
          </a>
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            查看
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                百分比
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  100.00%
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                文本
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                这是一段文本columns
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                状态
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-default"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    全部
                  </span>
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                状态2
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                open
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                时间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2020-08-09
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                money
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  ￥ 1212100
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demos renders ./packages/descriptions/src/demos/request.tsx correctly 1`] = `
<div
  class="ant-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      高级定义列表 request
    </div>
    <div
      class="ant-descriptions-extra"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-field-option"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn"
                type="button"
              >
                <span>
                  重 置
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link"
            type="button"
          >
            <span>
              修改
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                文本
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                这是一段文本
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                日期
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2020-07-30
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                money
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  ￥ 12121
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
